# congestion-coverage-plan

./: .gitignore  DiscreTimeSimulationForPeople.py  LICENSE  LrtdpTvmaAlgorithm.py  MDP.py  OccupancyMap.py  OccupancyMapCreator.py  PredictorCreator.py  README.md  TopologicalMap.py  calculate_statistics.py  cliff_predictor.py  convert_atc.py  count_number_of_detections.py  data_Analysis.py  hamiltonian_path.py  lrtdp.py  main.py  main_simulator_atc_corridor.py  main_simulator_atc_corridor_medium.py  main_simulator_atc_corridor_small.py  main_simulator_atc_square.py  main_simulator_atc_square_medium.py  main_simulator_common.py  main_simulator_iit_medium.py  main_simulator_iit_small.py  out.txt  plot_figures.py  print_positions.py  pyproject.toml  requirements.txt  simulator copy.py  simulator.py  sort_csv_by_time.py  steps_iit copy 2.csv  steps_iit copy.csv  steps_iit.csv  steps_iit_time_iter copy.csv  steps_iit_time_iter.csv  steps_iit_time_iter_small_1000.csv  (+25 more)
data/: medium_occupancy_map_atc_corridor_4_levels.yaml  medium_occupancy_map_atc_corridor_mixed.yaml  medium_occupancy_map_atc_square_3_levels.yaml  medium_occupancy_map_atc_square_5_levels.yaml  medium_occupancy_map_atc_square_mixed-topological.yaml  medium_occupancy_map_atc_square_mixed.yaml  minimal_occupancy_map.yaml  minimal_topological_map.yaml  occupancy_map.yaml  occupancy_map_atc_corridor_latest_times_higher_17-topological.yaml  occupancy_map_atc_corridor_latest_times_higher_17_atc_reduced.yaml  occupancy_map_atc_medium_latest.yaml  occupancy_map_atc_medium_latest_2000.yaml  occupancy_map_atc_medium_latest_20000.yaml  occupancy_map_iit_medium_1000-topological.yaml  occupancy_map_iit_medium_1000.yaml  occupancy_map_iit_medium_1000_5_levels.yaml  occupancy_map_iit_medium_latest_10000000.yaml  occupancy_map_iit_small_1000.yaml  (+7 more)
(+540 files in other folders)
